--- a/DATN_API/appsettings.json
+++ b/DATN_API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-CI9J4P6P;Initial Catalog=DATN_PhoneHub_Done;Integrated Security=True;TrustServerCertificate=True"
+    "DefaultConnection": "Data Source=LAPTOP-CI9J4P6P;Initial Catalog=DATN_PhoneHub_1;Integrated Security=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
