--- a/DATN_API/appsettings.json
+++ b/DATN_API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ACER\\SQLEXPRESS;Initial Catalog=DATN_PhoneHub_1;Integrated Security=True;TrustServerCertificate=True"
+    "DefaultConnection": "Data Source=DESKTOP-0MDF18R\\SQLEXPRESS;Initial Catalog=DATN_PhoneHub_1;Integrated Security=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
